--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -27,6 +27,7 @@
       <th data-sortable='true' data-field='xp' {% if request.user.is_staff %}data-visible="false"{% endif %}>XP</th>
       <th data-sortable='true' data-field='num_courses' {% if request.user.is_staff %}data-visible="false"{% endif %}># Blocks</th>
       <th data-sortable='true' data-field='mark'>Mark</th>
+      <th data-sortable='true' data-field='portfolio'>Portfolio</th>
       {% if request.user.is_staff %}
       <th data-sortable='true' data-field='blocks'>Block</th>
       <th data-sortable='true' data-field='last_sub'>Last Quest</th>
@@ -58,6 +59,12 @@
         <td></td>
       {% endif %}
       <td>{{object.mark|floatformat}}</td>
+      <td>{% if object.user.portfolio.shared %}
+            <a href="{{ object.user.portfolio.get_absolute_url }}">View</a>
+          {% else %}
+            *Private*
+          {% endif %}
+      </td>
       {% if request.user.is_staff %}
         <td>{{object.blocks}}</td>
         <td>{{object.last_submission_completed.time_completed|date:'y/m/d'}}
