--- a/src/portfolios/templates/portfolios/list.html
+++ b/src/portfolios/templates/portfolios/list.html
@@ -31,7 +31,7 @@
 
             <td><a href="{%  url 'portfolios:detail' object.pk %}">
                 {{object.user}}</a></td>
-            <td>{{object.shared}}</td>
+            <td>{{object.listed_locally}}</td>
             <td>{{object.uuid}}</td>
             <td>{{object.pk}}</td>
         </tr>
