announcement messages and tidy

--- a/src/announcements/templates/announcements/list.html
+++ b/src/announcements/templates/announcements/list.html
@@ -47,7 +47,8 @@
             <a class="btn btn-danger" href="{% url 'announcements:delete' object.id %}" role="button">Delete</a>
             <a class="btn btn-warning" href="{% url 'announcements:update' object.id %}" role="button">Edit</a>
             {% if object.draft %}
-            <a class="btn btn-success" href="{% url 'announcements:publish' object.id %}" role="button">Publish</a>
+            <a class="btn btn-success" href="{% url 'announcements:publish' object.id %}" role="button"
+               title="Publish and broadcast this announcement to students.">Publish</a>
             {% else %}
             <a class="btn btn-primary" href="{% url 'announcements:copy' object.id %}" role="button">Copy</a>
             {% endif %}
