--- a/src/templates/account/logout.html
+++ b/src/templates/account/logout.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Sign Out" %} | {% endblock %}
 
-{% block heading %}{% trans "Sign Out" %}{% endblock %}
+{% block heading %}{% trans "Sign Out" %}<i class="pull-right fa fa-sign-out"></i>{% endblock %}
 {% block content %}
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
