--- a/src/templates/account/password_change.html
+++ b/src/templates/account/password_change.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Password Reset" %} | {% endblock %}
-{% block heading %}{% trans "Change Password" %}{% endblock %}
+{% block heading %}{% trans "Change Password" %}<i class="pull-right fa fa-key"></i>{% endblock %}
 {% block content %}
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
