--- a/src/templates/account/password_reset.html
+++ b/src/templates/account/password_reset.html
@@ -5,20 +5,13 @@
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %} | {% endblock %}
-{% block heading %}{% trans "Password Reset" %}{% endblock %}
+{% block heading %}{% trans "Password Reset" %}<i class="pull-right fa fa-key"></i>{% endblock %}
 {% block content %}
 
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p>Forgotten your password?  See your teacher to have it reset.</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
