quest map icon bug and header menu tweaks

--- a/src/djcytoscape/templates/djcytoscape/base.html
+++ b/src/djcytoscape/templates/djcytoscape/base.html
@@ -6,7 +6,7 @@
 {% block head %}{% endblock %}
 
 {% block content_first %}{% endblock %}
-{% block heading %}<i class="fa fa-share-alt pull-right"></i>{% block heading_inner %}{% endblock%} {% endblock %}
+{% block heading %}<i class="fa fa-map-signs pull-right"></i>{% block heading_inner %}{% endblock%} {% endblock %}
 
 {% block content %}{% endblock %}
 {% block js %}{% endblock %}
