--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -39,37 +39,17 @@
                        aria-expanded="false">Admin <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <!-- <li class="dropdown-header">Content</li> -->
-                        <!-- <li role="separator" class="divider"></li> -->
-                        <!-- <li class="dropdown-header">Reports</li>
-                        <li><a href="#">Remove User</a></li> -->
-                        <li><a href="/config">Configuration</a></li>
+                        <li><a title="This may take a few moments..."
+                                href="{% url 'djcytoscape:regenerate_all' %}">Refresh all Quest Maps</a></li>
+                        <li><a href="/config">Site Configuration</a></li>
                         <li role="separator" class="divider"></li>
                         <li class="dropdown-header">Database</li>
                         <li><a href="/admin">Django Admin</a></li>
-                        <li role="separator" class="divider"></li>
                         <!-- <li class="dropdown-header">Debug</li> -->
                     </ul>
                 </li>
                 {% endif %}
-                <!-- <li>
-                  <div class="nav navbar-text progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="1000" style="width: 60%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </li> -->
             </ul>
-
-
-            <!-- <div class="nav navbar-text progress">
-
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="1000" style="width: 60%;">
-                <span class="sr-only">60% Complete</span>
-              </div>
-            </div> -->
-            <!-- <div class="nav navbar-text progress" style="width: 100%; margin-top:10px">
-                <div class="bar" style="width: 30%;"></div>
-            </div> -->
 
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_authenticated %}
@@ -122,11 +102,11 @@
                         <li><a href="{% url 'suggestions:list' %}"><i class="fa fa-fw fa-lightbulb-o"></i>&nbsp;&nbsp;Suggestion
                             Box BETA</a></li>
                         <li>
+                            <a href="{% url 'maps:primary' %}">
+                                <i class="fa fa-fw fa-map-signs"></i>&nbsp;&nbsp;Quest Map (new)</a></li>
+                        <li>
                             <a href="https://docs.google.com/drawings/d/1IN1nFr00VI2BWaRvraiiRGgnYoKPs4ywt2rWevwHgXI/edit?usp=sharing">
                                 <i class="fa fa-fw fa-map-o"></i>&nbsp;&nbsp;Quest Map (old)</a></li>
-                        <li>
-                            <a href="{% url 'maps:primary' %}">
-                                <i class="fa fa-fw fa-share-alt"></i>&nbsp;&nbsp;Quest Map (auto)</a></li>
                         <li><a href="{% url 'courses:ranks' %}">
                             <i class="fa fa-fw fa-star-o"></i>&nbsp;&nbsp;Ranks List</a></li>
                         <li>
