--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -31,7 +31,7 @@
             <i class="fa fa-certificate fa-fw"></i>&nbsp; Badges
         </a>
         <a id="groups-menu" class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
-           href="{% url 'profiles:profile_list' %}">
+           href="{% url 'profiles:profile_list_current' %}">
             <i class="fa fa-users fa-fw"></i>&nbsp; Students
         </a>
         <a id="announcements-menu"
