comment out bootstrap tour references

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -69,7 +69,7 @@
 
 {% include 'javascript.html' %}
 {% block js %}{% endblock %}
-{% block tour_js %}{% endblock %}
+{#{% block tour_js %}{% endblock %}#}
 
 </body>
 </html>
