--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -24,7 +24,7 @@
 <!-- Custom js -->
 <script src="{% static 'js/custom.js' %}"></script>
 
-<script src="{% static 'js/bootstrap-tour.min.js' %}"></script>
+{#<script src="{% static 'js/bootstrap-tour.min.js' %}"></script>#}
 
 <script src="{% static 'js/jquery-double-submission.js' %}"></script>
 
